# home-service-flyio

./: .gitignore  Dockerfile  fly.toml  manage.py  pyproject.toml  startup.sh
.devcontainer/: devcontainer.json
home_service_flyio/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: admin.py  constants.py  decorators.py  forms.py  models.py  utils.py  views.py
myapp/migrations/: 0001_initial.py  0002_appointment.py  0003_alter_appointment_hours.py  0004_alter_appointment_options_and_more.py  0005_customer_user.py  0006_alter_customer_user.py  0007_alter_customer_user.py  0008_postalcode.py  0009_remove_postalcode_id_alter_postalcode_name.py  0010_remove_customer_street_name_and_more.py  0011_trainstation_trainstationexit.py  0012_seed_train_stations.py  0013_alter_trainstation_name_and_more.py  0014_assignedlocation.py  0015_trainstationpostalcodedistance.py  0016_assignedlocation_distance_km_and_more.py  0017_rename_distance_trainstationpostalcodedistance_distance_km_and_more.py  0018_assignedlocation_hourly_rate.py  0019_remove_trainstationpostalcodedistance_postal_code_and_more.py  0020_appointment_paid_alter_appointment_status.py  0021_alter_worker_name.py  0022_referrer_remove_customer_coordinator_and_more.py  0023_customer_email_address_alter_customer_phone_number.py  0024_seed_group_affiliate_20260211_0209.py  0025_alter_appointment_hours.py  0026_rename_referrer_affiliate_and_more.py  0027_affiliate_code_affiliate_user_and_more.py  0028_customer_preferred_worker.py  (+3 more)
postal_codes/: admin.py  apps.py  models.py  utils.py
static/: index-XOiIGw1Y.css
(+19 files in other folders)
